# apple-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  error.rs  lib.rs  signing.rs  url.rs  user.rs
src/appstore/: client.rs  consumption.rs  error.rs  messaging.rs  mod.rs  models.rs  notifications.rs  notifications_v1.rs  notifications_v2.rs  signed_data.rs  subscriptions.rs  transactions.rs  types.rs
src/cloudkit/: assets.rs  changes.rs  client.rs  error.rs  mod.rs  notifications.rs  query.rs  records.rs  subscriptions.rs  tokens.rs  types.rs  users.rs  zones.rs
tests/: auth_tests.rs  cloudkit_client_tests.rs  cloudkit_error_tests.rs  cloudkit_query_tests.rs  cloudkit_types_tests.rs  error_tests.rs  signing_tests.rs  url_tests.rs
