[package]
name = "apple"
version = "0.1.1"
edition = "2024"
description = "A Rust library for Apple Sign-In token validation, authentication and more"
license = "MIT"
repository = "https://github.com/meszmate/apple-rs"
readme = "README.md"
keywords = ["apple", "authentication", "sign-in", "jwt", "oauth"]
categories = ["authentication", "api-bindings"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8.1"
p256 = "0.11"
pem = "1.0"
base64 = "0.13"
url = "2.2"
serde_json = "1.0"
futures = "0.3"