[package]
name = "apple"
version = "0.2.0"
edition = "2024"
description = "A Rust library for Apple Sign-In authentication, CloudKit Web Services, and App Store Server API"
license = "MIT"
repository = "https://github.com/meszmate/apple-rs"
readme = "README.md"
keywords = ["apple", "authentication", "cloudkit", "appstore", "jwt"]
categories = ["authentication", "api-bindings"]

[features]
default = ["auth", "cloudkit"]
auth = []
cloudkit = ["sha2", "chrono"]
appstore = ["chrono", "x509-cert"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9"
p256 = "0.13"
pem = "3"
base64 = "0.22"
url = "2.2"
serde_json = "1.0"
futures = "0.3"
sha2 = { version = "0.10", optional = true }
chrono = { version = "0.4", optional = true }
x509-cert = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
